tests/results/syntax_errors/binary_mismatched_types.own
compile::stdout 0

compile::stderr 5
tests/inputs/syntax_errors/binary_mismatched_types.own:5:22:[1;31merror[0;39m:language feature `non literal implicit conversion` not yet implemented (may or may not be implemented in the future)
     4 |     let string: u8* = "hello"
     5 |     let num1: i32 = 7*string
       |                      ^
     6 |     return 0

compile::return_code 1

